feat: adding evaluate sentences #9